facebook and google share image

--- a/home.html
+++ b/home.html
@@ -23,12 +23,12 @@
 		<!-- G+ -->
 		<meta itemprop="name" content="Retrato do Financiamento Coletivo BR #rfcbr">
 		<meta itemprop="description" content="Confira a primeira e maior pesquisa já feita sobre o cenário do financiamento coletivo brasileiro. A #rfcbr 2013 é fruto da parceria entre Catarse, maior plataforma de crowdfunding do Brasil e Chorus,  empresa de pesquisa com foco em projetos ligados à cultura e sociedade.">
-		<meta itemprop="image" content="img/social.jpg">
+		<meta itemprop="image" content="http://pesquisa.catarse.me/img/social.jpg">
 
 		<meta property="og:title" content="Retrato do Financiamento Coletivo BR #rfcbr" />
 		<meta property="og:description" content="Confira a primeira e maior pesquisa já feita sobre o cenário do financiamento coletivo brasileiro. A #rfcbr 2013 é fruto da parceria entre Catarse, maior plataforma de crowdfunding do Brasil e Chorus,  empresa de pesquisa com foco em projetos ligados à cultura e sociedade." />
 		<meta property="og:url" content="http://pesquisa.catarse.me" />
-		<meta property="og:image" content="img/social.jpg" />
+		<meta property="og:image" content="http://pesquisa.catarse.me/img/social.jpg" />
 		<meta property="og:site_name" content="Retrato financiamento coletivo Brasil - Catarse e Chorus" />
 
 	<body>
