--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/style.min.css">
+		<link rel="stylesheet" href="css/style.css">
 
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
@@ -73,7 +73,7 @@
 				</section>
 
 				<!-- 2 -->
-				<section data-background="radial-gradient(circle, #9BDAA3, #57bf72)">
+				<section data-background="radial-gradient(circle, #ffffff, #eeeeee)">
 					<h2 class="dark-h2">O que queremos?</h2>
 					<div class="we-want">
 						<h3>Conhecer</h3>
@@ -94,7 +94,7 @@
 				</section>
 
 				<!-- 3 -->
-				<section data-background="radial-gradient(circle, #ACDA97, #73C260)">
+				<section data-background="radial-gradient(circle, #ffffff, #eeeeee)">
 					<h2 class="dark-h2">O que fizemos?</h2>
 					<div class="we-done">
 						<p class="we-done-presentation">Solicitamos a nossa base de usuários, assinantes da nossa newsletter e seguidores em redes sociais que respondessem a um questionário online com abordagens quantitativas e qualitativas sobre financiamento coletivo.</p>
@@ -118,7 +118,7 @@
 				</section>
 
 				<!-- 4 -->
-				<section data-background="radial-gradient(circle, #C4E18B, #9BCB55)">
+				<section data-background="radial-gradient(circle, #ffffff, #eeeeee)">
 					<h2 class="dark-h2">Você respondeu o <br>questionário?</h2>
 					<p class="question">Queremos saber se você que está nos visitando respondeu ao questionário que gerou os resultados dessa pesquisa. Fique tranquilo, sua resposta não vai te limitar em nada e serve apenas para diferenciarmos quem está voltando de quem está conhecendo a pesquisa agora.</p>
 
@@ -129,8 +129,8 @@
 				</section>
 
 				<!-- 5 -->
-				<section data-background="radial-gradient(circle, #F1C67B, #E89E39">
-					<h2 class="light-h2">Como lemos o resultado?</h2>
+				<section data-background="radial-gradient(circle, #ffffff, #eeeeee)">
+					<h2 class="dark-h2">Como lemos o resultado?</h2>
 					<p class="subtitle">Separamos a pesquisa nos capítulos descritos abaixo. Eles agrupam questões relacionadas e facilitam a leitura e entendimento dos dados.</p>
 					<div class="chapters">
 						<figure class="result-group">
@@ -168,10 +168,8 @@
 				</section>
 
 				<!-- 7 -->
-				<section class="result-group-page" data-background="radial-gradient(circle, #F9AF78, #F37C34)">
-					<img src="img/icone-financiamento.png">
-					<h3>Financiamento</h3>
-					<p>O que é esse tipo de financiamento que é coletivo? Em quais setores parece ter mais força? Para quê os brasileiros estão usando o financiamento coletivo?</p>
+				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+					<h3>Onde você mora?</h3>
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/6">anterior</a>
@@ -179,10 +177,24 @@
 				</section>
 
 				<!-- 8 -->
-				<section class="result-group-page" data-background="radial-gradient(circle, #F8A87B, #F36C34)">
-					<img src="img/icone-rede.png">
-					<h3>Rede</h3>
-					<p>Como se configuram os círculos de influência em uma campanha de financiamento coletivo? Como um projeto atinge diferentes camadas de pessoas e de que maneira esse processo ocorre? Essas são algumas das perguntas respondidas nesse capítulo.</p>
+				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+					<div id="gender">
+						<header>
+							<h3 id="gender-title"><img src="img/perfil/icon-genero.png">Gênero</h3>
+
+							<p class="gender-data"><img src="img/perfil/icon-man.png">59%</p>
+							<p class="gender-data"><img src="img/perfil/icon-woman.png">41%</p>
+						</header>
+						<div class="gender-table">
+							<h4><img src="img/perfil/icon-escolaridade.png">Idade</h4>
+							<img class="gender-graph" src="img/perfil/grafico-idade.png">
+						</div>
+						<div class="gender-table">
+							<h4><img src="img/perfil/icon-idade.png">Escolaridade</h4>
+							<img class="gender-graph" src="img/perfil/grafico-escolaridade.png">
+						</div>
+					</div>
+
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/7">anterior</a>
@@ -190,10 +202,13 @@
 				</section>
 
 				<!-- 9 -->
-				<section class="result-group-page" data-background="radial-gradient(circle, #F79D7B, #F35C34)">
-					<img src="img/icone-realizadores.png">
-					<h3>Realizadores</h3>
-					<p>Qual a idade típica de um realizador? Quais são as dificuldades que têm ao empreenderem uma campanha de financiamento coletivo? Conheça um pouco mais sobre os criadores de projetos que passaram pelo Catarse e veja dicas para a formatação de uma boa campanha.</p>
+				<section data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+					<div id="money">
+						<h3 id="money-title"><img src="img/perfil/icon-cifra.png">Qual a sua renda mensal?</h3>
+						<img id="money-image" src="img/perfil/grafico-renda.png">
+
+						<p id="money-text"><strong>64%</strong>das pessoas que fazem o financiamento coletivo acontecer no Brasil ganham até R$6.000 por mês</p>
+					</div>
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/8">anterior</a>
@@ -201,9 +216,8 @@
 				</section>
 
 				<!-- 10 -->
-				<section data-background="radial-gradient(circle, #FFFFFF, #EEEEEE)">
-					<h2 class="dark-h2">Curioso para ver o resultado?</h2>
-					<p class="big-subtitle">(com dados bonitões, cheio de infográficos e informações quentes sobre a pesquisa)</p>
+				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+					<h3>Ocupação e satisfação</h3>
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/9">anterior</a>
@@ -211,34 +225,79 @@
 				</section>
 
 				<!-- 11 -->
-				<section data-background="radial-gradient(circle, #FFFFFF, #EEEEEE)">
-					<h2 class="green-h2">Também estamos curiosos</h2>
-					<p class="final-text">Nós do Catarse e da Chorus achamos que essa pesquisa merece todo o carinho e atenção do mundo para entregarmos a vocês um trabalho lindo, completo e com ainda mais surpresas. A ideia aqui é chamar sua atenção e dizer que esse trabalho está em curso!</p>
-					<p class="final-text">Em janeiro de 2014, quando o Catarse completará 3 aninhos de vida, esse será o nosso presente para a comunidade de financiamento coletivo mais curiosa do Brasil!</p>
-					<p class="final-text">Quer saber sobre o lançamento da pesquisa e receber novidades do Catarse?</p>
-
-					<!-- Begin MailChimp Signup Form -->
-					<div id="mc_embed_signup">
-						<form action="http://catarse.us5.list-manage.com/subscribe/post?u=ebfcd0d16dbb0001a0bea3639&amp;id=46e8b40265" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-							<div class="mc-field-group">
-								<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Digite seu email e assine nossa News!">
-							</div>
-							<div id="mce-responses" class="clear">
-								<div class="response" id="mce-error-response" style="display:none"></div>
-								<div class="response" id="mce-success-response" style="display:none"></div>
-							</div>
-							<div class="clear">
-								<input type="submit" value="Assine" name="subscribe" id="mc-embedded-subscribe" class="button">
-							</div>
-						</form>
-					</div>
-					<!--End mc_embed_signup-->
-
-					<hr>
-					<p class="back-project">Quer fazer parte dessa história AGORA? <a href="http://catarse.me/explore?ref=hotsitepesquisa3anos">Apoie um projeto!</a></p>
+				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+					<h3>Area de atuação</h3>
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/10">anterior</a>
+					<a class="arrow-right" href="#/12">próximo</a>
+				</section>
+
+				<!-- 12 -->
+				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+					<div id="time">
+						<h3 id="time-title"><img src="img/perfil/icon-calendar.png">Empreendedores, há quanto tempo abriram seus negócios?</h3>
+						<ul id="time-data-list">
+							<li id="time-data-01">
+								<p>Menos de 01 ano</p>
+								<strong>13%</strong>
+							</li>
+							<li id="time-data-02">
+								<p>De<br> 01 a 03 anos</p>
+								<strong>32%</strong>
+							</li>
+							<li id="time-data-03">
+								<p>De<br> 03 a 05 anos</p>
+								<strong>15%</strong>
+							</li>
+							<li id="time-data-04">
+								<p>De<br> 05 a 10 anos</p>
+								<strong>17%</strong>
+							</li>
+							<li id="time-data-05">
+								<p>Mais<br> de 10 anos</p>
+								<strong>23%</strong>
+							</li>
+						</ul>
+
+						<p class="time-text"><strong>68%</strong>dos empreendedores entrevistados enxergam potencial de financiamento coletivo em seus negócios</p>
+						<p class="time-text"><strong>81%</strong>dos estudantes entrevistados estão interessados em empreender projetos próprios após se formarem</p>
+					</div>
+
+
+					<!-- navigation -->
+					<a class="arrow-left" href="#/11">anterior</a>
+					<a class="arrow-right" href="#/13">próximo</a>
+				</section>
+
+				<!-- 13 -->
+				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+					<h3>Hábitos e condutas</h3>
+
+					<!-- navigation -->
+					<a class="arrow-left" href="#/12">anterior</a>
+					<a class="arrow-right" href="#/14">próximo</a>
+				</section>
+
+				<!-- 14 -->
+				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+					<div id="information">
+						<p id="information-text">Sites e portais de notícias já ocupam lugar junto às redes sociais quando o assunto é fonte de notícia. De maneira geral, a opinião acaba sendo formada com um misto entre as notícias dos grandes agentes de mídia online e o conteúdo postado pelos usuários e conhecidos nas redes sociais.</p>
+						<h3 id="information-title">Onde buscam informação?</h3>
+						<img src="img/perfil/grafico-informacoes.png">
+					</div>
+
+					<!-- navigation -->
+					<a class="arrow-left" href="#/13">anterior</a>
+					<a class="arrow-right" href="#/15">próximo</a>
+				</section>
+
+				<!-- 15 -->
+				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+					<h3>Comentários</h3>
+
+					<!-- navigation -->
+					<a class="arrow-left" href="#/14">anterior</a>
 				</section>
 			</div>
 		</div>
