--- a/home.html
+++ b/home.html
@@ -44,290 +44,13 @@
 			<div class="stamp"><a href="#/0">#rfcbr</a></div>
 			<!-- 0 -->
 			<div class="slides">
-				<section data-background="radial-gradient(circle, #ffffff, #eeeeee)">
-					<div class="full-width">
-						<h1 class="presentation-frame">
-							retrato<br>
-							financiamento<br>
-							coletivo<br>
-							brasil<br>
-							<small>2013/2014</small>
-						</h1>
-						<img src="img/logos.png"></img>
-
-						<!-- navigation -->
-						<a class="arrow-right first-arrow" href="#/1">Começar</a>
-					</div>
-				</section>
-
-				<!-- 1 -->
-				<section data-background="radial-gradient(circle, #ffffff, #eeeeee)">
-					<p class="presentation-text">A pesquisa Retrato do Financiamento Coletivo no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e tem o intuito de permitir aos participantes deste ecosistema, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
-					<p class="presentation-text">Acreditamos que quanto mais disponibilizarmos informação aberta a todos, mais potência teremos ao desenvolver o financiamento coletivo em terras brasileiras.</p>
-					<p class="presentation-text">Este estudo é uma parceria entre o Catarse, maior comunidade de financiamento coletivo do Brasil, e a Chorus, empresa de pesquisa com foco em projetos ligados à cultura e sociedade.</p>
-					<img src="img/logos.png"></img>
-
-					<!-- navigation -->
-					<a class="arrow-left" href="#/0">anterior</a>
-					<a class="arrow-right" href="#/2">próximo</a>
-				</section>
-
-				<!-- 2 -->
-				<section data-background="radial-gradient(circle, #ffffff, #eeeeee)">
-					<h2 class="dark-h2">O que queremos?</h2>
-					<div class="we-want">
-						<h3>Conhecer</h3>
-						<p>o perfil das pessoas que fazem o financiamento coletivo acontecer no Brasil</p>
-						<h3>Compreender</h3>
-						<p>os comportamentos, motivações e porquês das pessoas ao apoiarem um projeto</p>
-					</div>
-					<div class="we-want">
-						<h3>Analisar</h3>
-						<p>o cenário atual do financiamento coletivo no país</p>
-						<h3>Apresentar</h3>
-						<p>um pouco da ótica dos realizadores de projetos que já passaram pela plataforma do Catarse</p>
-					</div>
-
-					<!-- navigation -->
-					<a class="arrow-left" href="#/1">anterior</a>
-					<a class="arrow-right" href="#/3">próximo</a>
-				</section>
-
-				<!-- 3 -->
-				<section data-background="radial-gradient(circle, #ffffff, #eeeeee)">
-					<h2 class="dark-h2">O que fizemos?</h2>
-					<div class="we-done">
-						<p class="we-done-presentation">Solicitamos a nossa base de usuários, assinantes da nossa newsletter e seguidores em redes sociais que respondessem a um questionário online com abordagens quantitativas e qualitativas sobre financiamento coletivo.</p>
-						<p class="we-done-data">
-							<strong class="we-done-numbers">3336</strong>
-							pessoas responderam o questionário
-						</p>
-						<p class="we-done-data">
-							<strong class="we-done-numbers">1.7%</strong>
-							margem de erro dos dados estatísticos
-						</p>
-						<p class="we-done-data">
-							<strong class="we-done-duration">29/08 a 17/09/2013</strong>
-							período em que os questionários foram respondidos
-						</p>
-					</div>
-
-					<!-- navigation -->
-					<a class="arrow-left" href="#/2">anterior</a>
-					<a class="arrow-right" href="#/4">próximo</a>
-				</section>
-
-				<!-- 4 -->
-				<section data-background="radial-gradient(circle, #ffffff, #eeeeee)">
-					<h2 class="dark-h2">Você respondeu o <br>questionário?</h2>
-					<p class="question">Queremos saber se você que está nos visitando respondeu ao questionário que gerou os resultados dessa pesquisa. Fique tranquilo, sua resposta não vai te limitar em nada e serve apenas para diferenciarmos quem está voltando de quem está conhecendo a pesquisa agora.</p>
-
-					<!-- navigation -->
-					<a class="arrow-left" href="#/3">anterior</a>
-					<a class="question-button" onclick="_gaq.push(['_trackEvent', 'response', 'yes'])" href="#/5">sim</a>
-					<a class="question-button" onclick="_gaq.push(['_trackEvent', 'response', 'no'])" href="#/5">não</a>
-				</section>
-
-				<!-- 5 -->
-				<section data-background="radial-gradient(circle, #ffffff, #eeeeee)">
-					<h2 class="dark-h2">Como lemos o resultado?</h2>
-					<p class="subtitle">Separamos a pesquisa nos capítulos descritos abaixo. Eles agrupam questões relacionadas e facilitam a leitura e entendimento dos dados.</p>
-					<div class="chapters">
-						<figure class="result-group">
-							<img src="img/icone-perfil.png">
-							<figcaption>Perfil</figcaption>
-						</figure>
-						<figure class="result-group">
-							<img src="img/icone-financiamento.png">
-							<figcaption>Financiamento</figcaption>
-						</figure>
-						<figure class="result-group">
-							<img src="img/icone-rede.png">
-							<figcaption>Rede</figcaption>
-						</figure>
-						<figure class="result-group last">
-							<img src="img/icone-realizadores.png">
-							<figcaption>Realizadores</figcaption>
-						</figure>
-					</div>
-
-					<!-- navigation -->
-					<a class="arrow-left" href="#/4">anterior</a>
-					<a class="arrow-right" href="#/6">próximo</a>
-				</section>
-
-				<!-- 6 -->
-				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
-					<img src="img/icone-perfil.png">
-					<h3>Perfil</h3>
-					<p>Quem somos nós? Foi essa a pergunta básica que nos levou a realizar esta pesquisa. Nesse capítulo conheceremos um pouco mais sobre o perfil das pessoas que participam do financiamento coletivo no Brasil.</p>
-
-					<!-- navigation -->
-					<a class="arrow-left" href="#/5">anterior</a>
-					<a class="arrow-right" href="#/7">próximo</a>
-				</section>
-
-				<!-- 7 -->
-				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
-					<h3>Onde você mora?</h3>
-
-					<!-- navigation -->
-					<a class="arrow-left" href="#/6">anterior</a>
-					<a class="arrow-right" href="#/8">próximo</a>
-				</section>
-
-				<!-- 8 -->
-				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
-					<div id="gender">
-						<header>
-							<h3 id="gender-title"><img src="img/perfil/icon-genero.png">Gênero</h3>
-
-							<p class="gender-data"><img src="img/perfil/icon-man.png">59%</p>
-							<p class="gender-data"><img src="img/perfil/icon-woman.png">41%</p>
-						</header>
-						<div class="gender-table">
-							<h4><img src="img/perfil/icon-escolaridade.png">Idade</h4>
-							<img class="gender-graph" src="img/perfil/grafico-idade.png">
-						</div>
-						<div class="gender-table">
-							<h4><img src="img/perfil/icon-idade.png">Escolaridade</h4>
-							<img class="gender-graph" src="img/perfil/grafico-escolaridade.png">
-						</div>
-					</div>
-
-
-					<!-- navigation -->
-					<a class="arrow-left" href="#/7">anterior</a>
-					<a class="arrow-right" href="#/9">próximo</a>
-				</section>
-
-				<!-- 9 -->
-				<section data-background="radial-gradient(circle, #F8BA77, #F38C34)">
-					<div id="money">
-						<h3 id="money-title"><img src="img/perfil/icon-cifra.png">Qual a sua renda mensal?</h3>
-						<img id="money-image" src="img/perfil/grafico-renda.png">
-
-						<p id="money-text"><strong>64%</strong>das pessoas que fazem o financiamento coletivo acontecer no Brasil ganham até R$6.000 por mês</p>
-					</div>
-
-					<!-- navigation -->
-					<a class="arrow-left" href="#/8">anterior</a>
-					<a class="arrow-right" href="#/10">próximo</a>
-				</section>
-
-				<!-- 10 -->
-				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
-					<h3>Ocupação e satisfação</h3>
-
-					<!-- navigation -->
-					<a class="arrow-left" href="#/9">anterior</a>
-					<a class="arrow-right" href="#/11">próximo</a>
-				</section>
-
-				<!-- 11 -->
-				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
-					<h3>Area de atuação</h3>
-
-					<!-- navigation -->
-					<a class="arrow-left" href="#/10">anterior</a>
-					<a class="arrow-right" href="#/12">próximo</a>
-				</section>
-
-				<!-- 12 -->
-				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
-					<div id="time">
-						<h3 id="time-title"><img src="img/perfil/icon-calendar.png">Empreendedores, há quanto tempo abriram seus negócios?</h3>
-						<ul id="time-data-list">
-							<li id="time-data-01">
-								<p>Menos de 01 ano</p>
-								<strong>13%</strong>
-							</li>
-							<li id="time-data-02">
-								<p>De<br> 01 a 03 anos</p>
-								<strong>32%</strong>
-							</li>
-							<li id="time-data-03">
-								<p>De<br> 03 a 05 anos</p>
-								<strong>15%</strong>
-							</li>
-							<li id="time-data-04">
-								<p>De<br> 05 a 10 anos</p>
-								<strong>17%</strong>
-							</li>
-							<li id="time-data-05">
-								<p>Mais<br> de 10 anos</p>
-								<strong>23%</strong>
-							</li>
-						</ul>
-
-						<p class="time-text"><strong>68%</strong>dos empreendedores entrevistados enxergam potencial de financiamento coletivo em seus negócios</p>
-						<p class="time-text"><strong>81%</strong>dos estudantes entrevistados estão interessados em empreender projetos próprios após se formarem</p>
-					</div>
-
-
-					<!-- navigation -->
-					<a class="arrow-left" href="#/11">anterior</a>
-					<a class="arrow-right" href="#/13">próximo</a>
-				</section>
-
-				<!-- 13 -->
-				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
-					<h3>Hábitos e condutas</h3>
-
-					<!-- navigation -->
-					<a class="arrow-left" href="#/12">anterior</a>
-					<a class="arrow-right" href="#/14">próximo</a>
-				</section>
-
-				<!-- 14 -->
-				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
-					<div id="information">
-						<p id="information-text">Sites e portais de notícias já ocupam lugar junto às redes sociais quando o assunto é fonte de notícia. De maneira geral, a opinião acaba sendo formada com um misto entre as notícias dos grandes agentes de mídia online e o conteúdo postado pelos usuários e conhecidos nas redes sociais.</p>
-						<h3 id="information-title">Onde buscam informação?</h3>
-						<img src="img/perfil/grafico-informacoes.png">
-					</div>
-
-					<!-- navigation -->
-					<a class="arrow-left" href="#/13">anterior</a>
-					<a class="arrow-right" href="#/15">próximo</a>
-				</section>
-
-				<!-- 15 -->
-				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
-					<h3>Comentários</h3>
-
-					<!-- navigation -->
-					<a class="arrow-left" href="#/14">anterior</a>
-				</section>
 			</div>
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.min.js"></script>
-		<script>
-			Reveal.initialize({
-				width: 1276,
-				height: 638,
-				controls: false,
-				progress: false,
-				history: false,
-				center: true,
-				keyboard: true,
-				overview: false,
-
-				theme: Reveal.getQueryHash().theme,
-				transition: Reveal.getQueryHash().transition || 'default',
-
-				dependencies: [
-					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
-				]
-			});
-		</script>
+		<script src="lib/js/jquery-2.0.3.min.js"></script>
+		<script src="js/loader.js"></script>
 
 		<!-- Facebook -->
 		<div id="fb-root"></div>
