--- a/home.html
+++ b/home.html
@@ -134,20 +134,20 @@
 					<p class="subtitle">Separamos a pesquisa nos capítulos descritos abaixo. Eles agrupam questões relacionadas e facilitam a leitura e entendimento dos dados.</p>
 					<div class="chapters">
 						<figure class="result-group">
-							<img src="img/icone-perfil.png">
-							<figcaption>Perfil</figcaption>
+							<img src="img/perfil/imagem-perfil-4-perfil.png">
+							<figcaption class="perfil">Perfil</figcaption>
 						</figure>
 						<figure class="result-group">
-							<img src="img/icone-financiamento.png">
-							<figcaption>Financiamento</figcaption>
+							<img src="img/perfil/imagem-perfil-4-financiamento.png">
+							<figcaption class="financiamento">Financiamento</figcaption>
 						</figure>
 						<figure class="result-group">
-							<img src="img/icone-rede.png">
-							<figcaption>Rede</figcaption>
+							<img src="img/perfil/imagem-perfil-4-rede.png">
+							<figcaption class="rede">Rede</figcaption>
 						</figure>
 						<figure class="result-group last">
-							<img src="img/icone-realizadores.png">
-							<figcaption>Realizadores</figcaption>
+							<img src="img/perfil/imagem-perfil-4-realiza.png">
+							<figcaption class="realizadores">Realizadores</figcaption>
 						</figure>
 					</div>
 
@@ -170,6 +170,7 @@
 				<!-- 7 -->
 				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
 					<h3>Onde você mora?</h3>
+					<img src="img/perfil/imagem-perfil-7.png" alt="">
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/6">anterior</a>
@@ -216,8 +217,43 @@
 				</section>
 
 				<!-- 10 -->
-				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
-					<h3>Ocupação e satisfação</h3>
+				<section data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+					<h3>Qual a sua ocupação?</h3>
+
+					<ul id="occupation">
+						<li>
+							<p class="item-1">Funcionário de empresa privada</p>
+							<p>26%</p>
+						</li>
+						<li>
+							<p class="item-2">Servidor público</p>
+							<p>18%</p>
+						</li>
+						<li>
+							<p class="item-3">Empreendedor / dono de empresa</p>
+							<p>14%</p>
+						</li>
+						<li>
+							<p class="item-4">Freela / autônomo</p>
+							<p>14%</p>
+						</li>
+						<li>
+							<p class="item-5">Estudante</p>
+							<p>13%</p>
+						</li>
+						<li>
+							<p class="item-6">3° setor</p>
+							<p>4%</p>
+						</li>
+						<li>
+							<p class="item-7">Sem trabalho</p>
+							<p>4%</p>
+						</li>
+						<li>
+							<p class="item-8">Outros</p>
+							<p>6%</p>
+						</li>
+					</ul>
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/9">anterior</a>
@@ -225,9 +261,80 @@
 				</section>
 
 				<!-- 11 -->
-				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
-					<h3>Area de atuação</h3>
+				<section data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+					<div id="workarea">
+						<div>
+							<h3>Área de trabalho</h3>
+							<p>Ao lado você confere quais são as áreas profissionais de pessoas que participam de alguma forma do financiamento coletivo. Se a letrinha da sua área ficou pequena demais para ler ou nem está listada, está na hora de agitar a sua rede para criar, apoiar ou divulgar um projeto no Catarse.</p>
+						</div>
 
+						<ul>
+							<li class="item-1">
+								<p>10%</p>
+								<p>comunicação & jornalismo</p>
+							</li>
+							<li class="item-2">
+								<p>10%</p>
+								<p>administração & negócios</p>
+							</li>
+							<li class="item-3">
+								<p>10%</p>
+								<p>web & tecnologia</p>
+							</li>
+							<li class="item-4">
+								<p>9%</p>
+								<p>artes</p>
+							</li>
+							<li class="item-5">
+								<p>6%</p>
+								<p>pedagogia e educação</p>
+							</li>
+							<li class="item-6">
+								<p>5%</p>
+								<p>marketing & publicidade</p>
+							</li>
+							<li class="item-7">
+								<p>5%</p>
+								<p>engenharia</p>
+							</li>
+							<li class="item-8">
+								<p>4%</p>
+								<p>produção cultural</p>
+							</li>
+							<li class="item-9">
+								<p>3%</p>
+								<p>saúde</p>
+							</li>
+							<li class="item-10">
+								<p>3%</p>
+								<p>direito</p>
+							</li>
+							<li class="item-11">
+								<p>2%</p>
+								<p>arquitetura & urbanismo</p>
+							</li>
+							<li class="item-12">
+								<p>2%</p>
+								<p>ciências exatas</p>
+							</li>
+							<li class="item-13">
+								<p>2%</p>
+								<p>meio ambiente</p>
+							</li>
+							<li class="item-14">
+								<p>1.5%</p>
+								<p>games</p>
+							</li>
+							<li class="item-15">
+								<p>1.5%</p>
+								<p>psicologia</p>
+							</li>
+							<li class="item-16">
+								<p>1%</p>
+								<p>ciências naturais</p>
+							</li>
+						</ul>
+					</div>
 					<!-- navigation -->
 					<a class="arrow-left" href="#/10">anterior</a>
 					<a class="arrow-right" href="#/12">próximo</a>
@@ -273,6 +380,7 @@
 				<!-- 13 -->
 				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
 					<h3>Hábitos e condutas</h3>
+					<img src="img/perfil/imagem-perfil-13.png" alt="">
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/12">anterior</a>
