added new page transition css+js and started with transition tests

--- a/home.html
+++ b/home.html
@@ -13,6 +13,8 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+    <!--<link rel="stylesheet" href="css/animation.css">-->
+    <!--<link rel="stylesheet" href="css/component.css">-->
 		<link rel="stylesheet" href="css/style.css">
 
 		<!--[if lt IE 9]>
@@ -30,62 +32,60 @@
 		<meta property="og:image" content="http://pesquisa.catarse.me/img/social.jpg" />
 		<meta property="og:site_name" content="Retrato financiamento coletivo Brasil - Catarse e Chorus" />
 
-	<body>
-		<div class="reveal">
-			<div class="share">
-				<p>Compartilhe a pesquisa!</p>
-				<ul>
-					<li><div class="fb-share-button" data-href="http://pesquisa.catarse.me" data-type="button_count"></div></li>
-					<li><a href="https://twitter.com/share" class="twitter-share-button" data-text="Confira a pesquisa Retrato do Financiamento Coletivo no Brasil! #rfcbr http://pesquisa.catarse.me by @catarse e Chorus.vc " data-lang="pt">Tweetar</a></li>
-					<li><div class="g-plusone" data-size="medium"></div></li>
-				</ul>
-			</div>
-			<div class="stamp"><a href="#/0">#rfcbr</a></div>
-			<!-- 0 -->
-			<div class="slides">
+    <body>
+    <div class="share">
+      <p>Compartilhe a pesquisa!</p>
+      <ul>
+        <li><div class="fb-share-button" data-href="http://pesquisa.catarse.me" data-type="button_count"></div></li>
+        <li><a href="https://twitter.com/share" class="twitter-share-button" data-text="Confira a pesquisa Retrato do Financiamento Coletivo no Brasil! #rfcbr http://pesquisa.catarse.me by @catarse e Chorus.vc " data-lang="pt">Tweetar</a></li>
+        <li><div class="g-plusone" data-size="medium"></div></li>
+      </ul>
+    </div>
+    <div class="stamp"><a href="#/0">#rfcbr</a></div>
+    <!-- 0 -->
+    <div class="slides pt-perspective">
 
-			</div>
-		</div>
+    </div>
 
-		<script src="lib/js/jquery-2.0.3.min.js"></script>
-		<script src="js/loader.js"></script>
+    <script src="lib/js/jquery-2.0.3.min.js"></script>
+    <script src="js/loader.js"></script>
 
-		<!-- Facebook -->
-		<div id="fb-root"></div>
-		<script>(function(d, s, id) {
-		  var js, fjs = d.getElementsByTagName(s)[0];
-		  if (d.getElementById(id)) return;
-		  js = d.createElement(s); js.id = id;
-		  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=229023540487586";
-		  fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));
-		</script>
+    <!-- Facebook -->
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+var js, fjs = d.getElementsByTagName(s)[0];
+if (d.getElementById(id)) return;
+js = d.createElement(s); js.id = id;
+js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=229023540487586";
+fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
+    </script>
 
-		<!-- G+ -->
-		<script type="text/javascript">
-		  window.___gcfg = {lang: 'pt-BR'};
+    <!-- G+ -->
+    <script type="text/javascript">
+window.___gcfg = {lang: 'pt-BR'};
 
-		  (function() {
-		    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-		    po.src = 'https://apis.google.com/js/platform.js';
-		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-		  })();
-		</script>
+(function() {
+ var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+ po.src = 'https://apis.google.com/js/platform.js';
+ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+ })();
+    </script>
 
-		<!-- Twitter -->
-		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-		</script>
+    <!-- Twitter -->
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+    </script>
 
-		<!-- Google Analytics -->
-		<script type="text/javascript">
-		  var _gaq = _gaq || [];
-		  _gaq.push(['_setAccount', 'UA-5421030-12']);
-		  _gaq.push(['_trackPageview']);
-		  (function() {
-		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		  })();
-		</script>
-	</body>
+    <!-- Google Analytics -->
+    <script type="text/javascript">
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-5421030-12']);
+_gaq.push(['_trackPageview']);
+(function() {
+ var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+ ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+ })();
+    </script>
+    </body>
 </html>
