--- a/slide_1.html
+++ b/slide_1.html
@@ -1,16 +1,14 @@
-<section data-background="radial-gradient(circle, #ffffff, #eeeeee)">
-  <div class="full-width">
-    <h1 class="presentation-frame">
-      retrato<br>
-      financiamento<br>
-      coletivo<br>
-      brasil<br>
-      <small>2013/2014</small>
-    </h1>
-    <img src="img/logos.png"></img>
+<section class="pt-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
+  <h1 class="presentation-frame">
+    retrato<br>
+    financiamento<br>
+    coletivo<br>
+    brasil<br>
+    <small>2013/2014</small>
+  </h1>
+  <img src="img/logos.png"></img>
 
-    <!-- navigation -->
-    <a class="arrow-right first-arrow" href="#/2">Começar</a>
-  </div>
+  <!-- navigation -->
+  <a class="arrow-right first-arrow" href="#/2">Começar</a>
 </section>
 
