--- a/slide_2.html
+++ b/slide_2.html
@@ -1,4 +1,4 @@
-<section data-background="radial-gradient(circle, #ffffff, #eeeeee)">
+<section class="pt-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
   <p class="presentation-text">A pesquisa Retrato do Financiamento Coletivo no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e tem o intuito de permitir aos participantes deste ecosistema, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
   <p class="presentation-text">Acreditamos que quanto mais disponibilizarmos informação aberta a todos, mais potência teremos ao desenvolver o financiamento coletivo em terras brasileiras.</p>
   <p class="presentation-text">Este estudo é uma parceria entre o Catarse, maior comunidade de financiamento coletivo do Brasil, e a Chorus, empresa de pesquisa com foco em projetos ligados à cultura e sociedade.</p>
