--- a/slide_1.html
+++ b/slide_1.html
@@ -1,4 +1,4 @@
-<section class="pt-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
+<section class="et-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
   <h1 class="presentation-frame">
     retrato<br>
     financiamento<br>
