--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
         <img src="img/logos.png"></img>
 
         <!-- navigation -->
-        <a class="arrow-right first-arrow et-rotate" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">Começar</a>
+        <a class="arrow-right first-arrow et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">Começar</a>
       </section>
       <section class="et-page" style= "background-color: red">
         <p class="presentation-text">A pesquisa Retrato do Financiamento Coletivo no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e tem o intuito de permitir aos participantes deste ecosistema, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
@@ -59,32 +59,28 @@
         <img src="img/logos.png"></img>
 
         <!-- navigation -->
-        <a class="arrow-left et-rotate" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">anterior</a>
-        <a class="arrow-right et-rotate" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">próximo</a>
+        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+        <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
       </section>
-<section class="et-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
-  <h2 class="dark-h2">O que queremos?</h2>
-  <div class="we-want">
-    <h3>Conhecer</h3>
-    <p>o perfil das pessoas que fazem o financiamento coletivo acontecer no Brasil</p>
-    <h3>Compreender</h3>
-    <p>os comportamentos, motivações e porquês das pessoas ao apoiarem um projeto</p>
-  </div>
-  <div class="we-want">
-    <h3>Analisar</h3>
-    <p>o cenário atual do financiamento coletivo no país</p>
-    <h3>Apresentar</h3>
-    <p>um pouco da ótica dos realizadores de projetos que já passaram pela plataforma do Catarse</p>
-  </div>
+      <section class="et-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
+        <h2 class="dark-h2">O que queremos?</h2>
+        <div class="we-want">
+          <h3>Conhecer</h3>
+          <p>o perfil das pessoas que fazem o financiamento coletivo acontecer no Brasil</p>
+          <h3>Compreender</h3>
+          <p>os comportamentos, motivações e porquês das pessoas ao apoiarem um projeto</p>
+        </div>
+        <div class="we-want">
+          <h3>Analisar</h3>
+          <p>o cenário atual do financiamento coletivo no país</p>
+          <h3>Apresentar</h3>
+          <p>um pouco da ótica dos realizadores de projetos que já passaram pela plataforma do Catarse</p>
+        </div>
 
-  <!-- navigation -->
-        <a class="arrow-left et-rotate" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">anterior</a>
-        <a class="arrow-right et-rotate" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">próximo</a>
-</section>
-
-
-
-
+        <!-- navigation -->
+        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+        <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+      </section>
     </div>
 
     <script src="lib/js/jquery-2.0.3.min.js"></script>
