now we have everything on the same file again

--- a/home.html
+++ b/home.html
@@ -37,8 +37,8 @@
       </ul>
     </div>
     <div class="stamp"><a href="#/0">#rfcbr</a></div>
-    <!-- 0 -->
     <div class="slides et-wrapper">
+      <!-- 1 -->
       <section class="et-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
         <h1 class="presentation-frame">
           retrato<br>
@@ -52,6 +52,8 @@
         <!-- navigation -->
         <a class="arrow-right first-arrow et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">Começar</a>
       </section>
+
+      <!-- 2 -->
       <section class="et-page" style= "background-color: red">
         <p class="presentation-text">A pesquisa Retrato do Financiamento Coletivo no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e tem o intuito de permitir aos participantes deste ecosistema, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
         <p class="presentation-text">Acreditamos que quanto mais disponibilizarmos informação aberta a todos, mais potência teremos ao desenvolver o financiamento coletivo em terras brasileiras.</p>
@@ -62,6 +64,8 @@
         <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
         <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
       </section>
+
+      <!-- 3 -->
       <section class="et-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
         <h2 class="dark-h2">O que queremos?</h2>
         <div class="we-want">
@@ -81,6 +85,334 @@
         <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
         <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
       </section>
+
+      <!-- 4 -->
+      <section class="et-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
+        <h2 class="dark-h2">O que fizemos?</h2>
+        <div class="we-done">
+          <p class="we-done-presentation">Solicitamos a nossa base de usuários, assinantes da nossa newsletter e seguidores em redes sociais que respondessem a um questionário online com abordagens quantitativas e qualitativas sobre financiamento coletivo.</p>
+          <p class="we-done-data">
+          <strong class="we-done-numbers">3336</strong>
+          pessoas responderam o questionário
+          </p>
+          <p class="we-done-data">
+          <strong class="we-done-numbers">1.7%</strong>
+          margem de erro dos dados estatísticos
+          </p>
+          <p class="we-done-data">
+          <strong class="we-done-duration">29/08 a 17/09/2013</strong>
+          período em que os questionários foram respondidos
+          </p>
+        </div>
+
+        <!-- navigation -->
+        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+        <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+      </section>
+
+      <!-- 5 -->
+      <section class="et-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
+        <h2 class="dark-h2">Você respondeu o <br>questionário?</h2>
+        <p class="question">Queremos saber se você que está nos visitando respondeu ao questionário que gerou os resultados dessa pesquisa. Fique tranquilo, sua resposta não vai te limitar em nada e serve apenas para diferenciarmos quem está voltando de quem está conhecendo a pesquisa agora.</p>
+
+        <!-- navigation -->
+        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+        <a class="question-button et-rotate" onclick="_gaq.push(['_trackEvent', 'response', 'yes'])" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">sim</a>
+        <a class="question-button et-rotate" onclick="_gaq.push(['_trackEvent', 'response', 'no'])" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">não</a>
+      </section>
+
+      <!-- 6 -->
+      <section class="et-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
+        <h2 class="dark-h2">Como lemos o resultado?</h2>
+        <p class="subtitle">Separamos a pesquisa nos capítulos descritos abaixo. Eles agrupam questões relacionadas e facilitam a leitura e entendimento dos dados.</p>
+        <div class="chapters">
+          <figure class="result-group">
+            <img src="img/perfil/imagem-perfil-4-perfil.png">
+            <figcaption class="perfil">Perfil</figcaption>
+          </figure>
+          <figure class="result-group">
+            <img src="img/perfil/imagem-perfil-4-financiamento.png">
+            <figcaption class="financiamento">Financiamento</figcaption>
+          </figure>
+          <figure class="result-group">
+            <img src="img/perfil/imagem-perfil-4-rede.png">
+            <figcaption class="rede">Rede</figcaption>
+          </figure>
+          <figure class="result-group last">
+            <img src="img/perfil/imagem-perfil-4-realiza.png">
+            <figcaption class="realizadores">Realizadores</figcaption>
+          </figure>
+        </div>
+
+        <!-- navigation -->
+        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+        <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+      </section>
+
+      <!-- 7 -->
+      <section class="et-page" class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+        <img src="img/icone-perfil.png">
+        <h3>Perfil</h3>
+        <p>Quem somos nós? Foi essa a pergunta básica que nos levou a realizar esta pesquisa. Nesse capítulo conheceremos um pouco mais sobre o perfil das pessoas que participam do financiamento coletivo no Brasil.</p>
+
+        <!-- navigation -->
+        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+        <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+      </section>
+
+      <!-- 8 -->
+      <section class="et-page" class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+        <h3>Onde você mora?</h3>
+        <img src="img/perfil/imagem-perfil-7.png" alt="">
+
+        <!-- navigation -->
+        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+        <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+      </section>
+
+      <!-- 9 -->
+      <section class="et-page" class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+        <div id="gender">
+          <header>
+            <h3 id="gender-title"><img src="img/perfil/icon-genero.png">Gênero</h3>
+
+            <p class="gender-data"><img src="img/perfil/icon-man.png">59%</p>
+            <p class="gender-data"><img src="img/perfil/icon-woman.png">41%</p>
+          </header>
+          <div class="gender-table">
+            <h4><img src="img/perfil/icon-escolaridade.png">Idade</h4>
+            <img class="gender-graph" src="img/perfil/grafico-idade.png">
+          </div>
+          <div class="gender-table">
+            <h4><img src="img/perfil/icon-idade.png">Escolaridade</h4>
+            <img class="gender-graph" src="img/perfil/grafico-escolaridade.png">
+          </div>
+        </div>
+
+
+        <!-- navigation -->
+        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+        <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+      </section>
+
+      <!-- 10 -->
+      <section class="et-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+        <div id="money">
+          <h3 id="money-title"><img src="img/perfil/icon-cifra.png">Qual a sua renda mensal?</h3>
+          <img id="money-image" src="img/perfil/grafico-renda.png">
+
+          <p id="money-text"><strong>64%</strong>das pessoas que fazem o financiamento coletivo acontecer no Brasil ganham até R$6.000 por mês</p>
+        </div>
+
+        <!-- navigation -->
+        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+        <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+      </section>
+
+      <!-- 11 -->
+      <section class="et-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+        <h3>Qual a sua ocupação?</h3>
+
+        <ul id="occupation">
+          <li>
+          <p class="item-1">Funcionário de empresa privada</p>
+          <p>26%</p>
+          </li>
+          <li>
+          <p class="item-2">Servidor público</p>
+          <p>18%</p>
+          </li>
+          <li>
+          <p class="item-3">Empreendedor / dono de empresa</p>
+          <p>14%</p>
+          </li>
+          <li>
+          <p class="item-4">Freela / autônomo</p>
+          <p>14%</p>
+          </li>
+          <li>
+          <p class="item-5">Estudante</p>
+          <p>13%</p>
+          </li>
+          <li>
+          <p class="item-6">3° setor</p>
+          <p>4%</p>
+          </li>
+          <li>
+          <p class="item-7">Sem trabalho</p>
+          <p>4%</p>
+          </li>
+          <li>
+          <p class="item-8">Outros</p>
+          <p>6%</p>
+          </li>
+        </ul>
+
+        <!-- navigation -->
+        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+        <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+      </section>
+
+      <!-- 12 -->
+      <section class="et-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+        <div id="workarea">
+          <div>
+            <h3>Área de trabalho</h3>
+            <p>Ao lado você confere quais são as áreas profissionais de pessoas que participam de alguma forma do financiamento coletivo. Se a letrinha da sua área ficou pequena demais para ler ou nem está listada, está na hora de agitar a sua rede para criar, apoiar ou divulgar um projeto no Catarse.</p>
+          </div>
+
+          <ul>
+            <li class="item-1">
+            <p>10%</p>
+            <p>comunicação & jornalismo</p>
+            </li>
+            <li class="item-2">
+            <p>10%</p>
+            <p>administração & negócios</p>
+            </li>
+            <li class="item-3">
+            <p>10%</p>
+            <p>web & tecnologia</p>
+            </li>
+            <li class="item-4">
+            <p>9%</p>
+            <p>artes</p>
+            </li>
+            <li class="item-5">
+            <p>6%</p>
+            <p>pedagogia e educação</p>
+            </li>
+            <li class="item-6">
+            <p>5%</p>
+            <p>marketing & publicidade</p>
+            </li>
+            <li class="item-7">
+            <p>5%</p>
+            <p>engenharia</p>
+            </li>
+            <li class="item-8">
+            <p>4%</p>
+            <p>produção cultural</p>
+            </li>
+            <li class="item-9">
+            <p>3%</p>
+            <p>saúde</p>
+            </li>
+            <li class="item-10">
+            <p>3%</p>
+            <p>direito</p>
+            </li>
+            <li class="item-11">
+            <p>2%</p>
+            <p>arquitetura & urbanismo</p>
+            </li>
+            <li class="item-12">
+            <p>2%</p>
+            <p>ciências exatas</p>
+            </li>
+            <li class="item-13">
+            <p>2%</p>
+            <p>meio ambiente</p>
+            </li>
+            <li class="item-14">
+            <p>1.5%</p>
+            <p>games</p>
+            </li>
+            <li class="item-15">
+            <p>1.5%</p>
+            <p>psicologia</p>
+            </li>
+            <li class="item-16">
+            <p>1%</p>
+            <p>ciências naturais</p>
+            </li>
+          </ul>
+        </div>
+        <!-- navigation -->
+        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+        <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+      </section>
+
+      <!-- 13 -->
+      <section class="et-page" class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+        <div id="time">
+          <h3 id="time-title"><img src="img/perfil/icon-calendar.png">Empreendedores, há quanto tempo abriram seus negócios?</h3>
+          <ul id="time-data-list">
+            <li id="time-data-01">
+            <p>Menos de 01 ano</p>
+            <strong>13%</strong>
+            </li>
+            <li id="time-data-02">
+            <p>De<br> 01 a 03 anos</p>
+            <strong>32%</strong>
+            </li>
+            <li id="time-data-03">
+            <p>De<br> 03 a 05 anos</p>
+            <strong>15%</strong>
+            </li>
+            <li id="time-data-04">
+            <p>De<br> 05 a 10 anos</p>
+            <strong>17%</strong>
+            </li>
+            <li id="time-data-05">
+            <p>Mais<br> de 10 anos</p>
+            <strong>23%</strong>
+            </li>
+          </ul>
+
+          <p class="time-text"><strong>68%</strong>dos empreendedores entrevistados enxergam potencial de financiamento coletivo em seus negócios</p>
+          <p class="time-text"><strong>81%</strong>dos estudantes entrevistados estão interessados em empreender projetos próprios após se formarem</p>
+        </div>
+
+
+        <!-- navigation -->
+        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+        <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+      </section>
+
+      <!-- 14 -->
+      <section class="et-page" class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+        <h3>Hábitos e condutas</h3>
+        <img src="img/perfil/imagem-perfil-13.png" alt="">
+
+        <!-- navigation -->
+        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+        <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+      </section>
+
+      <!-- 15 -->
+      <section class="et-page" class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+        <div id="information">
+          <p id="information-text">Sites e portais de notícias já ocupam lugar junto às redes sociais quando o assunto é fonte de notícia. De maneira geral, a opinião acaba sendo formada com um misto entre as notícias dos grandes agentes de mídia online e o conteúdo postado pelos usuários e conhecidos nas redes sociais.</p>
+          <h3 id="information-title">Onde buscam informação?</h3>
+          <img src="img/perfil/grafico-informacoes.png">
+        </div>
+
+        <!-- navigation -->
+        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+        <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
+      </section>
+
+      <!-- 16 -->
+      <section class="et-page" class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+        <h3>Comentários</h3>
+
+        <div id="disqus_thread"></div>
+        <!-- navigation -->
+        <a class="arrow-left" href="#/15">anterior</a>
+      </section>
+      <script type="text/javascript">
+/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+      var disqus_shortname = 'pesquisacatarse'; // required: replace example with your forum shortname
+
+      /* * * DON'T EDIT BELOW THIS LINE * * */
+      (function() {
+       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+       dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+       })();
+      </script>
+
     </div>
 
     <script src="lib/js/jquery-2.0.3.min.js"></script>
